// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c6 {
  box-sizing: border-box;
  max-width: 600px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c11 {
  box-sizing: border-box;
  text-align: center;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: .56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all .3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
}

.c13:hover {
  opacity: 1;
}

.c13:active {
  opacity: .24;
}

.c13 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c13:hover,
.c13:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13:hover,
.c13:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Databases
      </div>
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add Database
      </button>
    </div>
    <div
      class="c4 sc-AxirZ c5"
      width="100%"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <img
            class="c8"
            height="160px"
            src="file_stub"
          />
          <div
            class="c9"
            font-size="24"
            font-weight="700"
          >
            Add your first database to Teleport
          </div>
          <div
            class="c10"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Database Access provides secure access to PostgreSQL, MySQL, MariaDB, MongoDB, Redis, and Microsoft SQL Server.
          </div>
        </div>
        <div
          class="c11"
        >
          <button
            class="c12"
            kind="primary"
            width="224px"
          >
            Add 
            database
          </button>
          <a
            class="c13"
            href="https://goteleport.com/docs/database-access/guides/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            <span>
              View Documentation
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Databases
    </div>
    <button
      class="c3"
      kind="primary"
      title=""
      width="240px"
    >
      Add Database
    </button>
  </div>
  <div
    class="c4"
    kind="danger"
  >
    Server Error
  </div>
</div>
`;

exports[`open source loaded 1`] = `
.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c14:active {
  opacity: 0.24;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c12 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c13 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c11 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c11 > thead > tr > th,
.c11 > tbody > tr > th,
.c11 > tfoot > tr > th,
.c11 > thead > tr > td,
.c11 > tbody > tr > td,
.c11 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c11 > thead > tr > th:first-child,
.c11 > tbody > tr > th:first-child,
.c11 > tfoot > tr > th:first-child,
.c11 > thead > tr > td:first-child,
.c11 > tbody > tr > td:first-child,
.c11 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c11 > thead > tr > th:last-child,
.c11 > tbody > tr > th:last-child,
.c11 > tfoot > tr > th:last-child,
.c11 > thead > tr > td:last-child,
.c11 > tbody > tr > td:last-child,
.c11 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c11 > tbody > tr > td {
  vertical-align: baseline;
}

.c11 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c11 > thead > tr > th .c9 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c11 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c11 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c11 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c11 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c11 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c3 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c8 {
  background: none;
  border: none;
  cursor: pointer;
}

.c8 .c9 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c8:hover .c9,
.c8:focus .c9 {
  opacity: 1;
}

.c8:disabled {
  cursor: default;
}

.c8:disabled .c9 {
  opacity: 0.1;
}

.c4 {
  box-sizing: border-box;
  font-size: 12px;
  min-width: 200px;
  outline: none;
  border: none;
  border-radius: 200px;
  height: 32px;
  transition: all .2s;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c4:hover,
.c4:focus,
.c4:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c4::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Databases
    </div>
  </div>
  <nav
    class="c3"
  >
    <input
      class="c4"
      placeholder="SEARCH..."
      value=""
    />
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            3
          </strong>
           of
           
          <strong>
            3
          </strong>
        </div>
      </div>
      <div
        class="c5"
      >
        <button
          class="c8"
          disabled=""
          title="Previous page"
        >
          <span
            class="c9 c10 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c8"
          disabled=""
          title="Next page"
        >
          <span
            class="c9 c10 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
  <table
    class="c11"
  >
    <thead>
      <tr>
        <th>
          <a>
            Name
            <span
              class="c9 c12 icon icon-chevron-up "
              color="light"
            />
          </a>
        </th>
        <th>
          <a>
            Description
            <span
              class="c9 c12 icon icon-chevrons-expand-vertical "
              color="light"
            />
          </a>
        </th>
        <th>
          <a>
            Type
            <span
              class="c9 c12 icon icon-chevrons-expand-vertical "
              color="light"
            />
          </a>
        </th>
        <th>
          Labels
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          aurora
        </td>
        <td>
          PostgreSQL 11.6: AWS Aurora 
        </td>
        <td>
          RDS PostgreSQL
        </td>
        <td>
          <div
            class="c13"
            kind="secondary"
          >
            cluster: root
          </div>
          <div
            class="c13"
            kind="secondary"
          >
            env: aws
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c14"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
      <tr>
        <td>
          mysql-aurora-56
        </td>
        <td>
          MySQL 5.6: AWS Aurora Longname For SQL
        </td>
        <td>
          Self-hosted MySQL
        </td>
        <td>
          <div
            class="c13"
            kind="secondary"
          >
            cluster: root
          </div>
          <div
            class="c13"
            kind="secondary"
          >
            env: aws
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c14"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
      <tr>
        <td>
          postgres-gcp
        </td>
        <td>
          PostgreSQL 9.6: Google Cloud SQL
        </td>
        <td>
          Cloud SQL PostgreSQL
        </td>
        <td>
          <div
            class="c13"
            kind="secondary"
          >
            cluster: env
          </div>
          <div
            class="c13"
            kind="secondary"
          >
            value: gcp
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c14"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`readonly empty state 1`] = `
.c4 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
  text-align: center;
  border-radius: 12px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Databases
      </div>
      <button
        class="c3"
        disabled=""
        kind="primary"
        title="You do not have access to add a database"
        width="240px"
      >
        Add Database
      </button>
    </div>
    <div
      class="c4"
      color="text.primary"
    >
      <div
        class="c5"
      >
        No Databases Found
      </div>
      <div
        class="c6"
      >
        Either there are no 
        databases
         in the "
        <span
          class="c7"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
